--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,9 @@
 API_PORT=3000
+BASE_URL="http://localhost:"
 DB_HOST=localhost
 DB_PORT=3306
 DB_USER=root
 USER_PASSWORD=
 DATABASE=test
+
+STORAGE_PATH="src/public/storage/images/"
